# evops-metrics

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  jekyll.yml  pre-commitCI.yml  pytestCI.yml
docs/: Makefile  conf.py  make.bat
docs_page/: README.md  _navbar.md  _sidebar.md  index.html  metrics.md
docs_page/metrics/: constants.md  dice.md  iou.md  mean.md  multiValue.md  precision.md  recall.md
docs_page/metrics/full_statistics/: full_statistics.md
docs_page/metrics/instance_based/: fScore.md  missed.md  noise.md  osr.md  panoptic.md  precision.md  recall.md  usr.md
docs_page/metrics/point_based/: dice.md  iou.md  mean.md
docs_page/utils/: constans.md
scripts/: run_tests.sh
src/evops/: __init__.py
src/evops/assoc_metrics/: __init__.py  assoc_metrics.py  matching.py
src/evops/benchmark/: association.py  default.py  detailed.py  dice.py  iou.py  mean.py  panoptic.py
src/evops/metrics/: DefaultBenchmark.py  DefaultMetrics.py  DetailedBenchmark.py  DiceBenchmark.py  IoUBenchmark.py  Mean.py  MeanBenchmark.py  MultiValueBenchmark.py  PanopticBenchmark.py  __init__.py  association.py  constants.py  full_statistics.py  instance_based.py  metrics.py  point_based.py
src/evops/utils/: CheckInput.py  IoUOverlap.py  MetricsUtils.py  association_utils.py  check_input.py  (+3 more)
src/metrics/: Benchmark.py  DefaultMetrics.py  DiceBenchmark.py  IoUBenchmark.py  Mean.py  MultiValueBenchmark.py  mean.py  metrics.py
src/tests/: test_IoU.py  test_default_metrics.py  test_dice.py  test_mean.py  test_multivalue.py
src/utils/: metrics.py  metrics_utils.py
tests/: fixtures.py  test_IoU.py  test_assoc__points.py  test_assoc_planes.py  test_assoc_points.py  test_calc_tp.py  test_default_metrics.py  test_detailed.py  test_dice.py  test_full_statistics.py  test_get_tp.py  test_iou.py  test_iou_overlap.py  test_mean.py  test_multivalue.py  test_panoptic.py
tests/data/: gt_0.npy  pred_0.npy
(+1 files in other folders)
