[tool.poetry]
name = "evops"
version = "0.1.0"
description = "Evaluation of Plane Segmentation."
authors = ["Dmitriy Jarosh", "Pavel Mokeev"]
license = "APACHE"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.5"
nptyping = "^1.4.4"
open3d = "^0.14.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pre-commit = "^2.17.0"
pytest = "^7.0.0"
myst-nb = {version = "^0.13.2", python = "^3.9"}
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
