[tool.poetry]
name = "evops"
version = "0.1.3"
description = "Evaluation of Plane Segmentation."
authors = ["Pavel Mokeev", "Dmitriy Jarosh"]
license = "APACHE"
readme = "README.md"
homepage = "https://evops.netlify.app/"
repository = "https://github.com/MobileRoboticsSkoltech/evops"

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.19.0"
nptyping = "^1.4.4"
importlib-metadata = "^4.8.3"
importlib-resources = "^5.7.1"

[tool.poetry.dev-dependencies]
open3d = "0.14.1"
pytest = "^7.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
